[package]
name = "natlify"
version = "0.1.0"
authors = ["kb10uy <kb10uy@kb10uy.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.async-std]
version = "1.7"
features = ["attributes"]

[dependencies.surf]
version = "2.1"

[dependencies.scraper]
version = "0.12"

[dependencies.url]
version = "2.1"

[dependencies.anyhow]
version = "1.0"

[dependencies.clap]
version = "3.0.0-beta.2"

[dependencies.log]
version = "0.4"

[dependencies.pretty_env_logger]
version = "0.4"

[dependencies.regex]
version = "1.4"
